--- a/app/src/main/res/layout/card_new.xml
+++ b/app/src/main/res/layout/card_new.xml
@@ -94,7 +94,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:adjustViewBounds="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:background="@color/black"
             android:backgroundTint="@color/transparente"
             android:clickable="true"
             android:contentDescription="@string/share"
