--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparente">#00FFFFFF</color>
+    <color name="favorite">#FFFF0000</color>
+    <color name="favorited">#9E9E9E</color>
 </resources>
